# git-rewrite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
examples/: add_ticket_prefix.py  fix_author.py  normalize_email.py  normalize_timezone.py  strip_ai_trailers.py
git_rewrite/: backends.py  cli.py  config.py  ops.py
tests/: test_backends.py  test_cli.py  test_config.py  test_ops.py
