[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-rewrite"
version = "0.1.1"
description = "Bulk-rewrite any part of git commit history: messages, authors, emails, dates, and more"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "tomli>=1.2.0; python_version < '3.11'",
]

[project.scripts]
git-rewrite = "git_rewrite.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]
completions = ["argcomplete>=3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["git_rewrite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
